[package]
name = "homomorphic_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { path = "../../tfhe", features = [ "boolean", "shortint", "integer", "nightly-avx512", "x86_64-unix", "seeder_deterministic" ] }
rayon = { version = "1.7.0"}
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.94"
serde = "1.0.156"
concrete-fft = { version = "0.2.1", features = ["serde"] }
tui = "0.19.0"
crossterm = "0.25.0"
ggez = "0.6.0"
ctrlc = "3.4.0"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ]}

[features]
fpga = ["tfhe/fpga"]

[[bin]]
name = "game-of-life"
path = "src/game-of-life.rs"